# ink_ecies

./: .cspell.jsonc  .gitignore  ABOUT.md  Cargo.toml  README.md  lib.rs  rust-toolchain.toml
extension/: Cargo.toml  lib.rs
frontend/: components.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/app/: globals.css
frontend/src/components/ui/: button.tsx  card.tsx  common.ts
