[package]
name = "ink-ecies"
version = "0.1.0"

authors = ["Weiliang Li <to.be.impressive@gmail.com>"]
edition = "2021"

[dependencies]
ink = {version = "4.2", default-features = false}
ink_env = {version = "4.2", default-features = false}
scale = {package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"]}
scale-info = {version = "2.9", default-features = false, features = ["derive"], optional = true}

ecies_extension = {path = "extension", default-features = false}

[dev-dependencies]
hex = {version = "0.4", default-features = false, features = ["alloc"]}
ink_e2e = "4.2.0"

[lib]
path = "lib.rs"

[features]
default = ["std"]
e2e-tests = []
ink-as-dependency = []
std = [
  "ink/std",
  "scale/std",
  "scale-info/std",
  "ecies_extension/std",
]
