[package]
name = "ecies_extension"
version = "1.0.0"

authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
publish = false

[dependencies]
ink = {version = "4.2", default-features = false}
scale = {package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"]}
scale-info = {version = "2.9", default-features = false, features = ["derive"]}

[lib]
path = "lib.rs"

[features]
default = ["std"]
ink-as-dependency = []
std = [
  "ink/std",
  "scale/std",
  "scale-info/std",
]
